<resources>
    <string name="app_name">MobileProjectCSI370</string>
    <string name="welcome">Welcome to PcPro</string>
    <string name="onlyTheBestComputers">Only the best computers</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="ResetPassword">Reset password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="enterNewPasswordAgain">Reenter New Password</string>
    <string name="enterNumber">Enter phone number</string>
    <string name="enterAddress">Enter your address</string>
    <!--Button text-->
    <string name="register">Register</string>
    <string name="logIn">Login</string>
    <string name="guest">Enter As Guest</string>
    <string name="resetPass">Reset</string>
    <string name="addToCart">Add to Cart</string>
    <string name="removeFromCart">Remove</string>
    <string name="inspect">Inspect</string>
    <string name="category">Category</string>
    <string name="office">Office</string>
    <string name="casual">Casual</string>
    <string name="enthusiast">Enthusiast</string>
    <string name="checkout">Checkout</string>
    <string name="cancelOrder">Cancel</string>
    <string name="purchase">Purchase</string>
    <string name="registerText">Don\'t have an account? Register here</string>
    <string name="forgotPassText">Forgot your password? Reset here</string>
    <string name="back">Back</string>
    <string name="myCart">My Cart</string>
    <string name="removeProduct">Remove Purchase</string>
    <string name="confirmPurchase">Confirm Purchase</string>
    <!--meta data-->
    <string name="enterQuantity">Enter Quantity</string>
    <string name="imgDesc">appIcon</string>
    <string name="title_activity_office_p_c">ScrollingActivity</string>
    <string name="officeFlavourText">Suitable for business solutions</string>
    <string name="casualFlavourText">If you\'re looking for a jack of all trades</string>
    <string name="enthusiastFlavourText">For the insane ones</string>
    <string name="pickCategory">Pick Your Flavour</string>
    <string name="specifications">Specifications</string>
    <string name="price">Price \n</string>
    <string name="casualPCs">Casual PCs</string>
    <string name="enthusiastPCs">Enthusiast PCs</string>

    <string name="enterPurchaseId">Enter Purchase ID</string>
    <string name="total">Total</string>
    <string name="forGuest">So we can get you your order</string>
    <!--Products text-->
    <string name="officePCs">Office PCs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inspect_scroll">ScrollingActivity</string>
    <!--Inspect strings-->
    <string name="name">Product name: \n</string>
    <string name="brand">Brand: \n</string>
    <string name="cpu">CPU: \n</string>
    <string name="ram">RAM: \n</string>
    <string name="HDD">HDD: \n</string>
    <string name="SSD">SSD: \n</string>
    <string name="graphics">Graphics: \n</string>
    <string name="os">Operating System: \n</string>
    <!--Office PC names and prices-->
    <string name="pc1">MSI - Desktop Computer, Mini-Desktop</string>
    <string name="officePc1Price">$549.99</string>
    <string name="pc2">Dell OptiPlex - Desktop Computer</string>
    <string name="officePc2Price">$619.99</string>
    <string name="pc3">HP Default - Desktop</string>
    <string name="officePc3Price">$569.99</string>

    <string name="pc4">CyberPowerPC - Gamer Master Gaming Desktop</string>
    <string name="casualPc1Price">$649.99</string>
    <string name="pc5">CyberPowerPC - Gamer Xtreme Gaming Desktop</string>
    <string name="casualPc2Price">$1049.99</string>
    <string name="pc6">Dell - G5 5000 Gaming Desktop</string>
    <string name="casualPc3Price">$1199.99</string>

    <string name="pc7">CLX Uprising Gaming Desktop</string>
    <string name="enthPc1Price">$1939.99</string>
    <string name="pc8">CyberPowerPC - Gamer Supreme Gaming Desktop</string>
    <string name="enthPc2Price">$1939.99</string>
    <string name="pc9">CLX Revo Gaming Desktop</string>
    <string name="enthPc3Price">$3149.99</string>

    <string name="title_activity_casual_p_c">ScrollingActivity</string>
    <string name="title_activity_enthusiast_p_c">ScrollingActivity</string>




</resources>